CARSOLD #31 | repaired auth loading screen and navbar to be synchronized with it and display loading properly without "jumping" elements

--- a/CARSOLD/frontend/src/index.css
+++ b/CARSOLD/frontend/src/index.css
@@ -12,6 +12,7 @@
 
 body {
     @apply font-global; /*applies font globally*/
+    overflow-y: scroll;
 }
 
 .shadow-top {
